@@ -16,6 +16,7 @@ depth: 1
  * Rectify previous fix for TableBlock becoming uneditable after save (Sage Abdullah)
  * Ensure that copying page correctly picks up the latest revision (Matt Westcott)
  * Adjust collection field alignment in multi-upload forms (LB (Ben) Johnston)
+ * Prevent lowercase conversions of IndexView column headers (Virag Jain)
 
 ### Documentation
 
