@@ -21,6 +21,7 @@ depth: 1
  * Move comment notifications toggle to the comments side panel (Sage Abdullah)
  * Remove comment button on InlinePanel fields (Sage Abdullah)
  * Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
+ * Prevent lowercase conversions of IndexView column headers (Virag Jain)
 
 ### Documentation
 
