@@ -26,6 +26,7 @@ FieldPanels can now be marked as read-only with the `read_only=True` keyword arg
  * Move comment notifications toggle to the comments side panel (Sage Abdullah)
  * Remove comment button on InlinePanel fields (Sage Abdullah)
  * Fix missing link to `UsageView` from `EditView` for snippets (Christer Jensen)
+ * Prevent lowercase conversions of IndexView column headers (Virag Jain)
 
 ### Documentation
 
