@@ -1135,7 +1135,7 @@ class FullFeaturedSnippet(
         return f"Foo {self.country_code}"
 
     get_foo_country_code.admin_order_field = "country_code"
-    get_foo_country_code.short_description = "Custom foo column"
+    get_foo_country_code.short_description = "custom FOO column"
 
     class Meta(TranslatableMixin.Meta):
         verbose_name = "full-featured snippet"
